--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
         <div class="box">
             <div class="box-content">
                 <h2> Pots and Pans </h2>
-                <div class="box-img" style="background-image: url('18.jpg');"></div>
+                <div class="box-img" style="background-image: url('./images/18.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2> New home decor under $50 </h2>
-                <div class="box-img" style="background-image: url('21.jpg');"></div>
+                <div class="box-img" style="background-image: url('./image/2.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
