--- a/index.html
+++ b/index.html
@@ -74,56 +74,56 @@
         <div class=" box"> 
             <div class="box-content">
                 <h2> Get your game on </h2>
-                <div class="box-img" style="background-image: url('10.jpg');"></div>
+                <div class="box-img" style="background-image: url('./images/gaming1.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
-                <h2> New year, new supplies </h2>
-                <div class="box-img" style="background-image: url('11.jpg');"></div>
+                <h2> Plants & Pots </h2>
+                <div class="box-img" style="background-image: url('./images/plants.webp');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2> Shop deals in fashion </h2>
-                <div class="box-img" style="background-image: url('14.jpg');"></div>
+                <div class="box-img" style="background-image: url('./images/clothing.avif');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
-                <h2> Pots and Pans </h2>
-                <div class="box-img" style="background-image: url('./images/18.jpg');"></div>
+                <h2> Kitchen essentials </h2>
+                <div class="box-img" style="background-image: url('./images/kitchen.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2> New home decor under $50 </h2>
-                <div class="box-img" style="background-image: url('./image/2.jpg');"></div>
+                <div class="box-img" style="background-image: url('./images/home1.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
-                <h2> Refresh your space </h2>
-                <div class="box-img" style="background-image: url('9.jpg');"></div>
+                <h2> Toys for all ages </h2>
+                <div class="box-img" style="background-image: url('./images/hot_wheels.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
-                <h2> Home storage under $70 </h2>
-                <div class="box-img" style="background-image: url('7.jpg');"></div>
+                <h2> Groceries undder $30 </h2>
+                <div class="box-img" style="background-image: url('./images/grocery.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
-                <h2> Shoes under $50 </h2>
-                <div class="box-img" style="background-image: url('15.jpg');"></div>
+                <h2> Explore more in Sports </h2>
+                <div class="box-img" style="background-image: url('./images/sports.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
